# deep_gp

./: README.md  deepgp_variational_inference_tutorial.py  demo.py  dgp.py  mcmc.py  tooling.py
dgp_cpp/: CMakeLists.txt  README.md
dgp_cpp/include/: dgp.hpp
dgp_cpp/scripts/: plot_results.py
dgp_cpp/src/: dgp.cpp  main.cpp  mcmc.cpp  tooling.cpp
